# Agri_AI_Assistance

./: .gitignore  render.yaml
backend/: .env.example  .gitignore  README.md  docker-compose.yml
backend/services/ai_chat/: Dockerfile  requirements.txt
backend/services/crop_recommendation/: Dockerfile
backend/services/disease_kb/: Dockerfile  download_model.py  requirements.txt
backend/services/farm_registry/: Dockerfile  requirements.txt
backend/services/fertilizer/: Dockerfile
backend/services/gateway/: Dockerfile  requirements.txt
backend/services/gis/: Dockerfile  requirements.txt
backend/services/irrigation/: Dockerfile
backend/services/market_price/: Dockerfile  requirements.txt
backend/services/soil/: Dockerfile  requirements.txt
backend/services/water/: Dockerfile  requirements.txt
backend/services/weather/: Dockerfile
backend/shared/: pyproject.toml
backend/shared/agri_common/: __init__.py  contract.py  geo.py
backend/shared/tests/: test_contract.py
docs/architecture/: ARCHITECTURE.md  DATA_SOURCES.md  MODULES.md  ROADMAP.md
mobile_app/: .gitignore  .metadata  README.md  pubspec.yaml
mobile_app/android/: gradle.properties
mobile_app/android/app/: build.gradle.kts
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: app.dart  main.dart
mobile_app/test/: widget_test.dart
mobile_app/tools/: generate_icon.py
mobile_app/web/: index.html  manifest.json
mobile_app/windows/: CMakeLists.txt
mobile_app/windows/runner/: Runner.rc  main.cpp
(+114 files in other folders)
