[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-common"
version = "0.1.0"
description = "Shared contract schemas and provider interfaces for the Agriculture AI Assistant backend services."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[tool.setuptools.packages.find]
include = ["agri_common*"]
